--- a/Node/package.json
+++ b/Node/package.json
@@ -4,7 +4,8 @@
   "description": "Nunjunks",
   "main": "start.js",
   "scripts": {
-    "start": "node --use_strict start.js"
+    "start": "node --use_strict start.js",
+    "test": "mocha"
   },
   "keywords": [
     "koa",
