--- a/Node/package.json
+++ b/Node/package.json
@@ -5,7 +5,7 @@
   "main": "start.js",
   "scripts": {
     "start": "node --use_strict start.js",
-    "test": "mocha"
+    "test": "mocha --require hook"
   },
   "keywords": [
     "koa",
