--- a/Node/package.json
+++ b/Node/package.json
@@ -29,7 +29,8 @@
     "mime": "1.3.4",
     "mz": "2.4.0",
     "sequelize": "3.24.1",
-    "mysql": "2.11.1"
+    "mysql": "2.11.1",
+    "ws": "1.1.1"
   },
   "devDependencies": {
     "mocha": "3.0.2"
